# OpenDNA

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/: handover-2026-04-17.md
docs/superpowers/plans/: 2026-04-17-opendna-mvp.md
docs/superpowers/specs/: 2026-04-17-opendna-design.md
examples/: sample-report.html
macos/OpenDNAShell/: README.md
macos/OpenDNAShell/Sources/OpenDNAShell/: ContentView.swift  OpenDNAShellApp.swift  ServerWebView.swift  ShellViewModel.swift
macos/OpenDNAShell/Support/: Info.plist
scripts/: build_annotations.py  build_macos_shell.sh
src/opendna/: __main__.py  analyzer.py  cli.py  models.py  parser.py  server.py  summaries.py
src/opendna/annotations/: __init__.py  clinvar.json  pharmgkb.json  updater.py
src/opendna/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/opendna/panels/: __init__.py  athletic.json  cardiovascular.json  cognition.json  dietary.json  eye_health.json  hfe.json  histamine.json  methylation.json  nicotine.json  pharmacogenomics.json  sensitivity.json  vitamin_d.json
src/opendna/report/: __init__.py  render.py  template.html.j2
src/opendna/web/static/: app.js  index.html  style.css
tests/: test_analyzer.py  test_annotations.py  test_cli.py  test_e2e.py  test_llm_anthropic.py  test_llm_ollama.py  test_llm_openai.py  test_panels.py  test_parser.py  test_report.py  test_server.py  test_summaries.py
tests/fixtures/: sample_23andme.txt
