[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendna"
version = "0.1.0"
description = "Local-first web utility for interpreting raw consumer DNA files"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Peter Corbett" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.30"]
all = ["opendna[anthropic,openai]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
opendna = "opendna.__main__:main"

[project.urls]
Homepage = "https://github.com/corbett3000/OpenDNA"
Issues = "https://github.com/corbett3000/OpenDNA/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/opendna"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
